...
                </segmentedControl>
                <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="edk-8h-woT">
                    <rect key="frame" x="16" y="445" width="358" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="test@test.com" borderStyle="roundedRect" placeholder="E-Mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FTi-FE-JYd">
                    <rect key="frame" x="16" y="509" width="358" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MQU-CR-vP8">
                    <rect key="frame" x="16" y="573" width="358" height="34"/>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ut2-q1-p0M">
                    <rect key="frame" x="16" y="721" width="358" height="35"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="filled" title="Auth">
                        <color key="baseBackgroundColor" systemColor="systemRedColor"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="didSubmitButtonPressed:" destination="-1" eventType="touchUpInside" id="lr5-Ey-eLj"/>
                    </connections>
                </button>
...
